--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/cli-plugin-vuex": "^4.5.4",
     "@vue/cli-service": "^4.5.4",
     "@vue/eslint-config-typescript": "^4.0.0",
+    "coveralls": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.1",
